--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -1,26 +1,32 @@
 name: Site
 
-on: workflow_dispatch
+on:
+  workflow_dispatch:
 
 jobs:
 
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
 
     - name: git checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v5
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
+    - name: Install mise
+      uses: jdx/mise-action@v3
       with:
-        python-version: 3.7
+        mise_toml: |
+          [tools]
+          ubi:mikaelhg/px2csv-go = "latest"
 
-    - name: Install dependencies
+    - name: Install uv
+      uses: astral-sh/setup-uv@v7
+
+    - name: Install packages
       run: |
-        python -m pip install -qq --upgrade pip
-        pip install -qq -r requirements.txt
+        apt-get update
+        apt-get install zstd
 
     - name: Build
       run: |
@@ -29,11 +35,31 @@ jobs:
         echo "Creating ./site and ./data"
         mkdir -p ./site ./data
         echo "Downloading data..."
-        python 01_download_data.py --url https://trafi2.stat.fi/database/TraFi/Katsastuksen_vikatilastot/010_kats_tau_101.px --file ./site/010_kats_tau_101.parquet
-        python 01_download_data.py --url https://trafi2.stat.fi/database/TraFi/Katsastuksen_vikatilastot/020_kats_tau_102.px --file ./site/020_kats_tau_102.parquet
+        wget -qO site/010_kats_tau_101.px https://trafi2.stat.fi/database/TraFi/Katsastuksen_vikatilastot/010_kats_tau_101.px
+        px2csv-go -px site/010_kats_tau_101.px -csv site/010_kats_tau_101.csv
+        uv run 02_process_data.py site/010_kats_tau_101.csv site/010_kats_tau_101.parquet
+        zstd -f -v -T0 -11 --long --output-dir-flat ./site/ site/*.px site/*.csv
 
-    - name: github pages deploy
-      uses: peaceiris/actions-gh-pages@v3
+        #wget https://trafi2.stat.fi/database/TraFi/Katsastuksen_vikatilastot/020_kats_tau_102.px
+        #wget https://trafi2.stat.fi/database/TraFi/Katsastuksen_vikatilastot/040_kats_tau_104.px
+        #wget https://trafi2.stat.fi/database/TraFi/Katsastuksen_vikatilastot/050_kats_tau_105.px
+
+    - name: Upload static files as artifact
+      id: deployment
+      uses: actions/upload-pages-artifact@v4
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./site
+        path: site/
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
