--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "katsastustilastot"
 version = "0.1.0"
 description = "Add your description here"
+classifiers = ["Private :: Do Not Upload"]
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
