--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,6 @@ readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
     "httpx[http2,zstd]>=0.28.1",
-    "pandera[polars]>=0.26.1",
     "polars>=1.34.0",
+    "ruff>=0.14.5",
 ]
